--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit
-pandas
-python-dotenv
-google-generativeai
+streamlit==1.45.0
+pandas==2.2.2
+python-dotenv==1.1.0
+google-generativeai==0.8.5
