--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
-streamlit==1.45.0
-pandas==2.1.4
-python-dotenv==1.1.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.25.0rc0
+google-api-python-client==2.169.0
+google-auth==2.39.0
+google-auth-httplib2==0.2.0
 google-generativeai==0.8.5
+googleapis-common-protos==1.70.0
+pandas==2.2.3
+python-dotenv==1.1.0
+streamlit==1.45.0
